--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,10 +1,19 @@
+html,
+body {
+  height: 100%; }
+
 body {
   margin: 0; }
 
 #river {
   list-style: none;
   padding: 0;
-  margin: 0; }
-  #river li {
-    min-height: 100px;
-    max-width: 30%; }
+  margin: 0;
+  height: 100%; }
+
+.photo {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 90%;
+  height: 90%; }
