--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -15,9 +15,16 @@ body { margin: 0 }
 }
 
 .photo {
+    transition: all 8s linear;
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    transform: translateX(-100%);
+
+    &.animating {
+      transform: translateX(100%);
+    }
 }
