--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -12,8 +12,13 @@ body {
   height: 100%; }
 
 .photo {
+  transition: all 8s linear;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
-  width: 90%;
-  height: 90%; }
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  transform: translateX(-100%); }
+  .photo.animating {
+    transform: translateX(100%); }
