--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,7 @@
 html,
 body {
-  height: 100%; }
+  height: 100%;
+  background-color: #1e1e1e; }
 
 body {
   margin: 0; }
@@ -12,13 +13,32 @@ body {
   height: 100%; }
 
 .photo {
-  transition: all 8s linear;
+  transition-property: transform;
+  transition-timing-function: linear;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center center;
   width: 100%;
-  height: 100%;
+  height: 90%;
   position: absolute;
+  top: 5%;
   transform: translateX(-100%); }
   .photo.animating {
     transform: translateX(100%); }
+  .photo div {
+    text-align: center;
+    position: absolute;
+    width: 100%; }
+    .photo div.bottom {
+      bottom: -30px; }
+    .photo div.top {
+      top: -30px; }
+    .photo div span {
+      background-color: black;
+      color: #464646;
+      font-family: Helvetica;
+      font-size: 10px;
+      text-transform: uppercase;
+      display: inline-block;
+      padding: 6px 20px;
+      border-radius: 1px; }
