--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,10 +1,10 @@
 html,
 body {
-  height: 100%;
-  background-color: #1e1e1e; }
+  height: 100%; }
 
 body {
-  margin: 0; }
+  margin: 0;
+  transition: all 30s; }
 
 #river {
   list-style: none;
@@ -22,23 +22,53 @@ body {
   height: 90%;
   position: absolute;
   top: 5%;
-  transform: translateX(-100%); }
+  transform: translateX(100%); }
   .photo.animating {
-    transform: translateX(100%); }
-  .photo div {
+    transform: translateX(-100%); }
+  .photo .title {
     text-align: center;
     position: absolute;
     width: 100%; }
-    .photo div.bottom {
+    .photo .title.bottom {
       bottom: -30px; }
-    .photo div.top {
+    .photo .title.top {
       top: -30px; }
-    .photo div span {
-      background-color: black;
-      color: #464646;
+    .photo .title span {
+      transition: all 25s;
       font-family: Helvetica;
       font-size: 10px;
       text-transform: uppercase;
       display: inline-block;
       padding: 6px 20px;
       border-radius: 1px; }
+
+body.sunrise {
+  background: linear-gradient(#ffee80, #ffe8be); }
+  body.sunrise .photo {
+    opacity: .8; }
+  body.sunrise .title span {
+    background-color: rgba(255, 238, 128, 0.8);
+    color: #998e4c; }
+
+body.day {
+  background-color: whitesmoke; }
+  body.day .title span {
+    background-color: #e6e6e6;
+    color: #969696; }
+
+body.sunset {
+  background: linear-gradient(#102040, #ffe8be); }
+  body.sunset .photo {
+    opacity: .9; }
+  body.sunset .title span {
+    background-color: rgba(16, 32, 64, 0.8);
+    color: #6f798c; }
+
+body.night {
+  background: linear-gradient(#1e1e1e, #0a0a0a); }
+  body.night .photo {
+    filter: grayscale(100%);
+    opacity: .5; }
+  body.night .title span {
+    background-color: black;
+    color: #464646; }
