--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,56 +3,63 @@ body {
   height: 100%; }
 
 body {
-  margin: 0;
-  transition: all 30s; }
+  margin: 0; }
 
 #river {
   list-style: none;
   padding: 0;
   margin: 0;
-  height: 100%; }
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  position: relative; }
 
 .photo {
   transition-property: transform;
   transition-timing-function: linear;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
-  width: 100%;
-  height: 90%;
   position: absolute;
-  top: 5%;
-  transform: translateX(100%); }
+  top: 10%;
+  height: 80%;
+  width: 100%;
+  transform: translateX(105%); }
   .photo.animating {
-    transform: translateX(-100%); }
-  .photo .title {
-    text-align: center;
-    position: absolute;
-    width: 100%; }
-    .photo .title.bottom {
-      bottom: -30px; }
-    .photo .title.top {
-      top: -30px; }
-    .photo .title span {
-      transition: all 25s;
-      font-family: Helvetica;
-      font-size: 10px;
-      text-transform: uppercase;
-      display: inline-block;
-      padding: 6px 20px;
-      border-radius: 1px; }
+    transform: translateX(-105%); }
+  .photo:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle; }
+
+.photo-wrapper {
+  vertical-align: middle;
+  display: inline-block;
+  text-align: right; }
+  .photo-wrapper img {
+    display: block;
+    max-height: 100%;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); }
+
+.title {
+  font-family: Helvetica;
+  font-size: 10px;
+  text-transform: uppercase;
+  display: inline-block;
+  padding: 10px;
+  margin-top: 5px;
+  width: 160px;
+  text-align: left; }
 
 body.sunrise {
   background: linear-gradient(#ffee80, #ffe8be); }
   body.sunrise .photo {
     opacity: .8; }
-  body.sunrise .title span {
+  body.sunrise .title {
     background-color: rgba(255, 238, 128, 0.8);
     color: #998e4c; }
 
 body.day {
   background-color: whitesmoke; }
-  body.day .title span {
+  body.day .title {
     background-color: #e6e6e6;
     color: #969696; }
 
@@ -60,7 +67,7 @@ body.sunset {
   background: linear-gradient(#102040, #ffe8be); }
   body.sunset .photo {
     opacity: .9; }
-  body.sunset .title span {
+  body.sunset .title {
     background-color: rgba(16, 32, 64, 0.8);
     color: #6f798c; }
 
@@ -69,6 +76,6 @@ body.night {
   body.night .photo {
     filter: grayscale(100%);
     opacity: .5; }
-  body.night .title span {
+  body.night .title {
     background-color: black;
     color: #464646; }
